<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">upNote</string>
    <string name="course1">None</string>
    <string name="course2">None</string>
    <string name="course3">None</string>
    <string name="course4">None</string>
    <string name="course5">None</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_add">Add a course</string>
    <string name="ADD_MESSAGE">AddActivity</string>
    <string name="selectcourse">Select a course</string>
    <string name="title_activity_view_photos">View photos in folder</string>
	<string name="ok_button">OK!</string>
	<string name="about_content">TODO</string>
	<color name="beige">#D8D8BF</color>
	<color name="brown">#593E1A</color>
	<color name="white">#FFFFFF</color>
	<color name="black">#000000</color>
	<string name="link"></string>
	<string name="newcourse">Settings</string>
	
</resources>